--- a/README
+++ b/README
@@ -1,1 +1,29 @@
+Description
+-----------
+
 py-sealhunter is pygame port of classic sealhunter game.
+
+Copying
+-------
+
+Code distributed under WTFPL v2.
+
+            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+                    Version 2, December 2004
+
+ Copyright (C) 2004 Sam Hocevar <sam@hocevar.net>
+
+ Everyone is permitted to copy and distribute verbatim or modified
+ copies of this license document, and changing it is allowed as long
+ as the name is changed.
+
+            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+   TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
+
+  0. You just DO WHAT THE FUCK YOU WANT TO.
+
+
+Performance
+-----------
+
+Use python psyco to speed things up a little.
